Update Integration tests.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,25 @@
   },
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "verbose": true,
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "preset": "jest-puppeteer",
+    "setupFilesAfterEnv": ["jest-extended"]
   }
 }
