Prepare project to publish. Refactor, add unit tests.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,17 @@
             "args": [
                 // "--i"
             ]
+        },
+        {
+            "name": "Current TS File",
+            "type": "node",
+            "request": "launch",
+            "args": ["${relativeFile}"],
+            "runtimeArgs": ["-r", "ts-node/register",],
+            "smartStep": true,
+            "cwd": "${workspaceRoot}",
+            "protocol": "inspector",
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
