--- a/package.json
+++ b/package.json
@@ -1,41 +1,26 @@
 {
   "name": "puppeteer-page-object",
+  "version": "0.0.1",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
-    "@types/puppeteer": "^1.12.3",
     "puppeteer-core": "^1.13.0",
-    "typescript": "^3.3.4000"
+    "puppeteer-keyboard": "^0.1.1"
   },
   "devDependencies": {
     "@types/get-port": "^4.2.0",
     "@types/jest": "^24.0.11",
+    "@types/puppeteer": "^1.12.3",
+    "get-port": "^4.2.0",
     "jest": "^24.5.0",
-    "ts-jest": "^24.0.0",
     "jest-extended": "^0.11.1",
     "jest-puppeteer": "^4.1.0",
     "puppeteer": "^1.13.0",
-    "get-port": "^4.2.0"
+    "ts-jest": "^24.0.0",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "test": "jest"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "verbose": true,
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "preset": "jest-puppeteer",
-    "setupFilesAfterEnv": ["jest-extended"]
   }
 }
