--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppeteer-page-object",
+  "name": "puppeteer-page-framework",
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
