--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "puppeteer-page-framework",
-  "version": "0.0.1",
+  "name": "page-framework",
+  "version": "0.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
