--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "puppeteer-core": "^1.13.0",
-    "puppeteer-keyboard": "^0.1.1"
+    "puppeteer-keyboard": "^0.1.1",
+    "chalk": "^2.4.2"
   },
   "devDependencies": {
     "@types/get-port": "^4.2.0",
